--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,11 @@ dependencies = [
     "requests>=2.32.5",
 ]
 
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["recon_ng_mcp_server*"]
+exclude = ["config*", "tests*"]
+
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
@@ -22,3 +27,7 @@ recon-mcp-run = "recon_ng_mcp_server.mcp_server:main"
 dev = [
     "pytest>=8.4.2",
 ]
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
