Fix MCP server structure to match official Python SDK patterns
- Fix entry points to point directly to main function
- Update fastmcp.json with correct entrypoint
- Remove unnecessary server.py wrapper
- Update main.py to use direct mcp.run() pattern
- Tests confirm full MCP protocol compatibility

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dev = [
 ]
 
 [project.scripts]
-recon-mcp = "recon_ng_mcp_server.server:main"
+recon-mcp = "recon_ng_mcp_server.mcp_server:main"
 recon-mcp-run = "recon_ng_mcp_server.mcp_server:main"
 
 [dependency-groups]
